--- a/index.html
+++ b/index.html
@@ -1,26 +1,67 @@
 <html>
-    <head>
-        <meta charset=ütf-8"/>
-        <title>HTML + CSS</title> 
 
-    </head>
-    <body>
-        <header>
-            <h1>
-                texto do H1
-                titulo principal, utilizar apenas 1 por pagina
-            </h1>
-        </header>
-        <main>
-            <h2>
-                texto do H2
-            </h2>
-            <section>
-                teste da sessão principal
-            </section>
-            <aside>
-                teste do aside
-            </aside>
-        </main>    
-    </body>
+<head>
+    <meta charset="utf-8" />
+    <link rel="stylesheet" type="text/css " href="styles.css ">
+    <title>HTML + CSS</title>
+    <stile>
+        .maria{color:aqua}
+    </stile>
+</head>
+
+<body>
+    <header>
+        <h1>
+            texto do H1 titulo principal, utilizar apenas 1 por pagina
+        </h1>
+    </header>
+    <nav>
+        <ul>
+            <li>item3</li>
+            <li>item2</li>
+            <li>item1</li>
+        </ul>
+        <ol>
+            <li>item3</li>
+            <li>item2</li>
+            <li>item1</li>
+        </ol>
+    </nav>
+    <main>
+        <h2>
+            texto do H2
+        </h2>
+        <p>teste do paragrafo</p>
+        <div>primeira div</div>
+        <svg version="1.1 " baseProfile="full " width="300 " height="200 " F xmlns="http://www.w3.org/2000/svg ">
+            <rect width="100% " height="100% " fill="green " />
+            <circle cx="150 " cy="100 " r="90 " fill="blue " />
+        </svg>
+        <div>segunda div
+            <a href="https://www.fiap.com.br/ ">link</a>
+
+            <hr>
+        </div>
+        <section>
+
+            <form type="text ">
+                <select>
+                    <option value="1 ">1</option>
+                    <option value="2 ">2</option>
+                </select>
+            </form>
+            teste da sessão principal
+            <b>texto bold</b>
+            <strong>tambem faz negrito, mas ganha uma enfase num leitor de conteudo</strong>
+            <em>italico com enfase</em>
+            <i>italico</i>
+        </section>
+        <aside>
+            teste do aside
+        </aside>
+    </main>
+    <script src="javascript.js "></script>
+    <!-- colocar o script no final, pois a ordem de carga da tela ficara para o final -->
+</body>
+
 </html>
